# agora

./: .env.example  .gitignore  LICENCE  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/components/: Home.tsx  IrisConnect.tsx  IrisConnectButton.tsx  Layout.tsx  PendingProposals.tsx  TransactionHistory.tsx  TransactionProposal.tsx  WalletCreate.tsx  WalletList.tsx
client/src/services/: api.ts
client/src/store/: wallet.ts
client/src/utils/: tx-lifecycle.ts  wasm-cleanup.ts  wasm-utils.ts
scripts/: build-wasm.sh
server/: Cargo.toml  Dockerfile
server/migrations/: 001_initial.sql
server/src/: config.rs  error.rs  main.rs
server/src/api/: mod.rs  multisigs.rs  proposals.rs
server/src/db/: mod.rs  models.rs  pool.rs
