[package]
name = "agora-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Keep postgress dep for prod environment
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite", "postgres", "chrono", "uuid", "migrate", "derive"] }


anyhow = "1.0"
thiserror = "1.0"


uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenv = "0.15"

[dev-dependencies]
sqlx-cli = "0.8"

